# transcribe-anything

./: .dockerignore  .gitignore  AI_README.md  ARCHITECTURE.md  DEV.md  Dockerfile  FEATURE.md  LICENSE  MANIFEST.in  NVIDIA_CACHE_FIX.md  README.md  check_linux_shared_libraries.py  clean  default.nix  demo_custom_prompts.py  devshell.nix  docker-compose.yml  entrypoint.sh  flake.nix  install  install_cuda.py  install_cuda.sh  install_dev.sh  lint  lint.sh  make_venv.py  notes.txt  overlay.nix  pyproject.toml  requirements.testing.txt  requirements.txt  setup.py  test  test.sh  test_nvidia_fix.py  test_prompt_functionality.py  tox.ini  upload_package.sh
.github/workflows/: build_docker_image.yml  lint.yml  push_macos.yml  push_ubuntu.yml  push_ubuntu_lint.yml  push_win.yml  test_macos.yml  test_macos_new.yml  test_ubuntu.yml  test_whisperx.yml  test_win.yml
examples/: Caddyfile  nginx.serve.conf  serve-compose.yml
examples/prompts/: business_names.txt  medical_terms.txt  technical_terms.txt
pkgs/: devshell.nix  disklru.nix  package.nix  static-ffmpeg.nix  uv-iso-env.nix  webvtt-py.nix  workspace.nix
runpod/: .env.example  Dockerfile  LICENSE  README.md  client_example.py  handler.py  requirements.txt  resolve_and_host.py  test_local.py
runpod/upstream-prs/: 01-setuptools-constraint-insane-env.md  02-mask-hf-token-in-oserror.md  03-handle-empty-diarize-segments.md  README.md
runpod/webapp/: requirements.txt  server.py  transcribe-webapp.service
runpod/webapp/static/: index.html
src/transcribe_anything/: WHISPER_OPTIONS.json  __init__.py  __main__.py  _cmd.py  _xpu_whisper.py  api.py  audio.py  cli_init.py  cli_init_insane.py  cli_init_insane_flash.py  cli_init_whisperx.py  cli_serve.py  client.py  cuda_available.py  flash_attention_wheels.py  generate_speaker_json.py  insane_align.py  insane_align_runner.py  insanely_fast_whisper.py  insanley_fast_whisper_reqs.py  install_whisper.py  logger.py  parse_whisper_options.py  sensevoice.py  sensevoice_reqs.py  sensevoice_runner.py  server_app.py  server_config.py  server_reqs.py  server_runner.py  srt_translation.py  stream_backend.py  stream_reqs.py  util.py  whisper.py  whisper_mac.py  whisperx.py  whisperx_reqs.py  xpu_iso_env.py  ytldp_download.py
src/transcribe_anything/_k2_stub/: __init__.py
src/transcribe_anything/_k2_stub/k2/: __init__.py
src/transcribe_anything/archive/: install_cuda.py
tests/: test_api.py  test_bad_video_title.py  test_client.py  test_cuda_diagnostics.py  test_cuda_version_upgrade.py  test_embed_transcript.py  test_fix_subtitles_path.py  test_generate_speaker_json.py  test_initial_prompt.py  test_insane_align_host.py  test_insane_align_runner.py  test_insane_flash_cmd_arg.py  test_insane_flash_reqs.py  test_insane_vs_cuda_longform_timestamps.py  test_insane_whisper_cmd_arg.py  test_insanely_fast_whisper.py  test_insanely_fast_whisper_cusparselt.py  test_insanely_fast_whisper_json_to_srt_txt.py  test_insanely_fast_whisper_mlx.py  test_insanely_fast_whisper_mps.py  test_insanley_fast_whisper_diarization.py  test_install_insanley_fast_whisper_reqs.py  test_k2_stub.py  test_local_file_cmd.py  test_macos_x86_unsupported.py  test_mlx_timestamps.py  test_nvidia_cache.py  test_nvidia_fix.py  test_parse_speaker.py  test_parse_whisper_options_errors.py  test_parse_whisper_options_first_run_banner.py  test_query_gpu_json_path.py  test_sensevoice_reqs.py  test_sensevoice_runner.py  test_server_app.py  test_srt_wrap.py  test_stream_backend.py  test_stream_protocol.py  test_transcribe_anything.py  test_transcribe_anything_api.py  (+8 more)
tests/localfile/: long.srt  problem.json  speaker-test.json  video.srt
text_zach_mike_spicy_ai/: out.json
transcribe_anything/: _cmd.py  api.py  audio.py  cmd.py  cuda_available.py  generate_speaker_json.py  insanely_fast_whisper.py  insanley_fast_whisper_reqs.py  install_whisper.py  logger.py  parse_whisper_options.py  run.py  srt_translation.py  srt_wrap.py  transcribe_anything.py  util.py  whisper.py  ytldp_download.py
