[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-anything"
readme = "README.md"
maintainers = [
  {name = "Zachary Vorhies", email = "dont@email.me"}
]

description = "Uses whisper AI to transcribe speach from video and audio files. Also accepts urls for youtube, rumble, bitchute, clear file, etc."
requires-python = ">=3.10"
keywords = ["transcribe", "open ai", "whisper"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies"]
# Change this with the version number bump.
version = "2.7.41"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
transcribe_anything = "transcribe_anything._cmd:main"
transcribe-anything = "transcribe_anything._cmd:main"
