[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-anything"
readme = "README.md"
description = "Uses Whisper AI to transcribe speech from video and audio files. Also accepts URLs for YouTube, Rumble, BitChute, clear file links, etc."
requires-python = ">=3.10"
keywords = ["transcribe", "openai", "whisper"]
license = { text = "BSD-3-Clause" }
dependencies = [
    "static-ffmpeg>=3.0",
    # >=2026.6.9: GHSA-537c/69qj/vx4q/c6mh — --exec command injection,
    # aria2c manifest code exec, filename sanitization bypass, cookie leak
    "yt-dlp>=2026.6.9",
    "appdirs>=1.4.4",
    "disklru>=1.0.7",
    "FileLock",
    "webvtt-py==0.4.6",
    "uv-iso-env>=1.0.44",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]
# VERSION
version = "4.1.0"  # Update this manually or configure setuptools-scm for automatic versioning
maintainers = [{ name = "Zachary Vorhies", email = "dont@email.me" }]

[project.optional-dependencies]
# `pip install transcribe-anything[server]` lets users run the daemon
# directly in their main venv (transcribe-anything serve --no-iso-env)
# instead of paying the iso-env build on first launch. Mirrors the
# deps installed into the daemon iso-env in server_reqs.py.
server = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]
# `pip install transcribe-anything[stream]` adds the realtime backend's
# dependencies. Pairs with `transcribe-anything serve --allow-stream
# --no-iso-env` so the daemon picks the real faster-whisper + silero-vad
# path when this extras group is installed. Without the extras (or
# inside the small daemon iso-env), --allow-stream falls back to the
# canned protocol-validation backend.
stream = [
    "faster-whisper>=1.1.0,<2.0.0",
    "silero-vad>=5.1.2",
    "ctranslate2>=4.4.0,<5.0.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0,<3.0.0",
]

[project.urls]
homepage = "https://github.com/zackees/transcribe-anything"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["transcribe_anything*"]
exclude = ["tests*", "docs*", "examples*"]
namespaces = false  # Prevent setuptools from looking elsewhere




[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = ["c", "i", "ok", "id", "e", "f"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.black]
line-length = 200
target-version = ['py310']

[tool.uv]
# Transitive floor (via yt-dlp -> secretstorage on Linux):
# cryptography < 48.0.1 bundles a vulnerable OpenSSL (GHSA-537c-gmf6-5ccf).
constraint-dependencies = ["cryptography>=48.0.1"]

[tool.uv.workspace]
members = ["tmp"]

[project.scripts]
transcribe_anything = "transcribe_anything._cmd:main"
transcribe-anything = "transcribe_anything._cmd:main"
transcribe-anything-init-insane = "transcribe_anything.cli_init_insane:main"
transcribe-anything-init-insane-flash = "transcribe_anything.cli_init_insane_flash:main"
transcribe-anything-init-whisperx = "transcribe_anything.cli_init_whisperx:main"
transcribe-anything-serve = "transcribe_anything.cli_serve:main"
